--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ TestResults
 x64/
 *_i.c
 *_p.c
-*.ilk
+*.ilk[[[[[[[[
 *.meta
 *.obj
 *.pch
@@ -110,3 +110,6 @@ Thumbs.db
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+Releases/*
+
+
